[ADD] basic structure of jekyll working as a charm :D

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
 <html>
-<body>
-  {% include header.html %}
-  {{ content }}
-</body>
+
+    {% include head.html %}
+
+    <body>
+    {% include header.html %}
+
+    <div class="page-content">
+      <div class="wrap">
+      {{ content }}
+      </div>
+    </div>
+
+
+    </body>
 </html>
