--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
