--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,8 @@
 ---
 # Front matter comment to ensure Jekyll properly reads file.
 ---
-@import 
-    "../_sass/qdd/_base.scss"
+@import "../_sass/qdd/_base.scss";
+@import "../_sass/qdd/_posts.scss";
+@import "../_sass/qdd/_code.scss";
+@import "../_sass/qdd/_syntax.scss";
     
