--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,16 @@
-<h1> Quilombo driven development </h1> 
+<div class='header'> 
+    <div class='container'>
+        <div class='col-1'>
+            <div class='header-image'>
+                <img class="mainLogo" src="/assets/bombMarioQDD.png" />
+            </div>
+        </div>
+        <div class='col-2'>
+            <h1 class='title'> Quilombo driven development </h1> 
+        </div>
+        <div class='nav'>
+            <a class='nav-item' href='/'>Home</a>
+            <a class='nav-item' href='/about'>About</a>
+        </div>
+    </div>
+</div>
