--- a/_sass/qdd/_base.scss
+++ b/_sass/qdd/_base.scss
@@ -1,11 +1,20 @@
+
 body{
   font-family: 'Rubik',Helvetica, Arial, sans-serif;
+  margin:0;
+  background-color: $background-color;
 }
 
-.mainLogo{
-    width:300px;
-    position: relative;
-    left: 50%;
-    margin-left: -150px
+.container{
+    max-width:calc(900px - (30px * 2));
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.page-content{
+    margin: 0 80px; 
+    background-color:#f9f9f9;
 }
 
