--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,2 +1,3 @@
+<meta name="viewport" content="width=device-width, user-scalable=no">
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
