[ADD] theme for post preview

--- a/_includes/postPreview.html
+++ b/_includes/postPreview.html
@@ -1,11 +1,13 @@
 <li>
-  <h2>
-    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-  </h2>
-  <span class="post-meta">
-    <span class="post-date">{{ post.date | date: "%F" }}</span>
-    {% for category in post.categories %}
-      <a href="/categorias/{{ category | slugify }}/" class="post-category">{{ category }}</a>
-    {% endfor %}
-  </span>
+ <div class='post-preview'>
+  <div class='col-1'>
+      <div class='post-tag'>[{{ post.tag }}]</div>
+  </div>
+  <div class='col-2'>
+      <h2>
+        <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+      </h2>
+      <span class="post-meta"></span>
+     </div>
+ </div>
 </li>
