--- a/_sass/qdd/_header.scss
+++ b/_sass/qdd/_header.scss
@@ -23,7 +23,7 @@
 
             &:hover{
                 background-color:$background-color;
-                color:#fabd2f;
+                color:$color-bold;
             }
         }  
     }
