--- a/_sass/qdd/_base.scss
+++ b/_sass/qdd/_base.scss
@@ -18,3 +18,12 @@ body{
     background-color:#f9f9f9;
 }
 
+
+@media screen and (max-width: $mobile-width){
+
+    .page-content{
+        margin: 0 5px; 
+    }
+
+}
+
