[ADD] mobile wrapping

--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -3,12 +3,14 @@
 }
 
 .posts{
+    padding: 0px;
     li{
         list-style:none; 
     }
 }
 .post-preview{
     display:flex;
+    flex-wrap: wrap-reverse;
     align-items: center;
 
     .col-1{
