[ADD] post-preview hiding col-1

--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -51,3 +51,12 @@
         }
     }
 }
+
+
+@media screen and (max-width: $mobile-width){
+   .post-preview{ 
+        .col-1{
+            display:none; 
+        }
+    }
+}
