[FIX] Home nav item was not working

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,11 +9,10 @@
             <h1 class='title'> Quilombo driven development </h1> 
         </div>
         <div class='nav'>
-            <a class='nav-item' href='/'>{{ site.translate['home'][page.lang] }}</a>
-            <a class='nav-item' href='/about'>{{ site.translate['about'][page.lang] }}</a>
+            <a class='nav-item' href={{ page.base-url }}>{{ site.translate['home'][page.lang] }}</a>
+            <!--<a class='nav-item' href='/about'>{{ site.translate['about'][page.lang] }}</a>-->
         </div>
         <div class="lang">
-            <p> {{page.nav['home']}}</p>
             <a class='lang-item' href="/">es</a>
             <a class='lang-item' href="/en">en</a>
         </div>
