--- a/_sass/qdd/_syntax.scss
+++ b/_sass/qdd/_syntax.scss
@@ -2,6 +2,12 @@
  * Syntax highlighting styles
  */
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+
+.highlighter-rouge{
+        background: $background-color;
+        color: $color-bold;
+  }  
+  
 .highlight {
   background: $background-color;
   color: #ebdbb2;
@@ -12,6 +18,7 @@
     font-family: 'Source Code Pro', monospace;
   }
 
+  
   .hll { background-color: #ffffcc }
   .c { color: #928374; font-style: italic; background-color: $background-color } /* Comment */
   .err { color: #ebdbb2; background-color: $background-color } /* Error */
