[ADD] Link for the whole post preview and icon for tags

--- a/_includes/postPreview.html
+++ b/_includes/postPreview.html
@@ -1,16 +1,19 @@
 <li>
- <div class='post-preview'>
-  <div class='col-1'>
-     <div class='post-date'>{{ post.date |  date: "%d|%m|%y" }}</div>
-  </div>
-  <div class='col-1'>
-     <div class='tag'>#{{ post.tag }}</div>
-</div>
-    <div class='col-2'>
-      <h2>
-        <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-      </h2>
-      <span class="post-meta"></span>
-     </div>
- </div>
+    <a class='post-preview-wrap-link' href="{{ post.url | prepend: site.baseurl }}">
+        <div class='post-preview'>
+            <div class='col-1'>
+                <div class='post-date'>{{ post.date |  date: "%d|%m|%y" }}</div>
+            </div>
+            <div class='col-1'>
+                <!--<div class='tag'>#{{ post.tag }}</div>-->
+                <img class='tag-image' src='/assets/{{post.tag}}.png'></img>
+            </div>
+            <div class='col-2'>
+                <h2>
+                    <div class="post-link" >{{ post.title }}</div>
+                </h2>
+                <span class="post-meta"></span>
+            </div>
+        </div>
+    </a>
 </li>
