--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -48,6 +48,7 @@
         border: 3px solid $background-color;
     } 
     &:hover{
+        transition:all 0.3s ease;
         background: $background-color; 
         color:white;
         cursor:pointer;
