--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
 
         <div class="page-content">
            {% include header.html %}
-          {{ content }}
+           {{ content }}
+           {% include footer.html %}
         </div>
-
 
     </body>
 </html>
