--- a/css/main.scss
+++ b/css/main.scss
@@ -9,3 +9,4 @@
 @import "../_sass/qdd/_code.scss";
 @import "../_sass/qdd/_syntax.scss";
 @import "../_sass/qdd/_header.scss";
+@import "../_sass/qdd/_footer.scss";
