--- a/_sass/qdd/_cross_variables.scss
+++ b/_sass/qdd/_cross_variables.scss
@@ -2,3 +2,4 @@ $margin-sides: 30px;
 $background-color: rgba(36, 24, 47, 0.99);
 $color-bold:#fabd2f;
 $mobile-width:800px;
+$border: 3px dotted $background-color;
