--- a/_sass/qdd/_base.scss
+++ b/_sass/qdd/_base.scss
@@ -35,7 +35,7 @@ a{
 @media screen and (max-width: $mobile-width){
 
     .page-content{
-        margin: 0 20px; 
+        margin: 0px; 
     }
 
 }
