--- a/_sass/qdd/_header.scss
+++ b/_sass/qdd/_header.scss
@@ -1,6 +1,7 @@
 .header{
     border-bottom: $border;
     height: 200px;
+    background: -webkit-linear-gradient(rgba(37, 25, 48, 0.12), $bg-grey);
 
     .col-1{
         width: 30%; 
@@ -14,7 +15,7 @@
     .mainLogo{
         height: 150px;
         flex:1; 
-        background-color: $color-bold;
+        background: -webkit-linear-gradient($bg-grey,rgba(37, 25, 48, 0.12));
         -webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
         border-radius: 50%;
         padding: 10px;
