--- a/css/main.scss
+++ b/css/main.scss
@@ -10,3 +10,7 @@
 @import "../_sass/qdd/_syntax.scss";
 @import "../_sass/qdd/_header.scss";
 @import "../_sass/qdd/_footer.scss";
+
+@import "../_sass/qdd/_layouts/_pageMD.scss";
+
+
