[ADD] new design for header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div class='header'> 
     <div class='container'>
-        <div class='col-1'>
-            <div class='header-image'>
-                <img class="mainLogo" src="/assets/bombMarioQDD.png" />
-            </div>
-        </div>
+        <!--<div class='col-1'>-->
+            <!--<div class='header-image'>-->
+                <!--<img class="mainLogo" src="/assets/bombMarioQDD.png" />-->
+            <!--</div>-->
+        <!--</div>-->
         <div class='col-2'>
             <h1 class='title'> Quilombo driven development </h1> 
         </div>
@@ -16,5 +16,10 @@
             <a class='lang-item' href="/">es</a>
             <a class='lang-item' href="/en">en</a>
         </div>
+    </div>
+    <div class="container-image">
+            <div class='header-image'>
+                <img class="mainLogo" src="/assets/bombMarioQDD.png" />
+            </div>
     </div>
 </div>
