--- a/_sass/qdd/_layouts/_pageMD.scss
+++ b/_sass/qdd/_layouts/_pageMD.scss
@@ -1,7 +1,5 @@
 .pagemd{
-    .pagemd-content{
-        padding: 0 20px; 
-    }
+    padding: 10px 25px;
 
     .pagemd-footer{
         display:flex;
