--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,8 @@
         <div class='nav'>
             <a class='nav-item' href={{ page.base-url }}>{{ site.translate['home'][page.lang] }}</a>
             <a class='nav-item' href= {{ page.base-url | append:  page.pages-url | append: '/about.html' }}>{{ site.translate['about'][page.lang] }}</a>
+
+            <a class='nav-item' href= {{ page.base-url | append:  page.pages-url | append: '/glosarry.html' }}>{{ site.translate['glosarry'][page.lang] }}</a>
         </div>
         <div class="lang">
             <a class='lang-item' href="/">es</a>
