--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -1,5 +1,11 @@
 .post{
     padding: 10px 25px;
+    a{
+        color:blue; 
+        &:hover{
+            color:$color-bold; 
+        }
+    }
 }
 
 .posts{
