--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,9 @@ comments: true
   <header class="post-header">
       <h1>{{ page.title }}</h1>
     <p class="meta">
-        {{ page.date | date: "%b %-d, %Y" }}
+                {% if page.date %}
+                    {{ page.date | date: "%b %-d, %Y" }}
+                {% endif %}
                 {% if page.author %} • 
                     {% include author.html  %}
                 {% endif %}
