[MOD] background color for container-image

--- a/_sass/qdd/_header.scss
+++ b/_sass/qdd/_header.scss
@@ -19,6 +19,7 @@
         height:10px;
         border-top:$border;
         border-bottom:$border;
+        background-color: $background-color;
 
         .header-image{
             position:absolute;
