--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 ---
 
 
+@import "../_sass/qdd/_colors.scss";
 @import "../_sass/qdd/_cross_variables.scss";
 @import "../_sass/qdd/_base.scss";
 @import "../_sass/qdd/_post.scss";
