--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,14 @@
-<div class='header'> 
-    <div class='container'>
-        <!--<div class='col-1'>-->
-            <!--<div class='header-image'>-->
-                <!--<img class="mainLogo" src="/assets/bombMarioQDD.png" />-->
-            <!--</div>-->
-        <!--</div>-->
-        <div class='col-2'>
-            <h1 class='title'> Quilombo driven development </h1> 
-        </div>
-        <div class='nav'>
-            <a class='nav-item' href={{ page.base-url }}>{{ site.translate['home'][page.lang] }}</a>
-            <a class='nav-item' href= {{ page.base-url | append:  page.pages-url | append: '/about.html' }}>{{ site.translate['about'][page.lang] }}</a>
-
-            <a class='nav-item' href= {{ page.base-url | append:  page.pages-url | append: '/glosarry.html' }}>{{ site.translate['glosarry'][page.lang] }}</a>
-        </div>
-        <div class="lang">
-            <a class='lang-item' href="/">es</a>
-            <a class='lang-item' href="/en">en</a>
-        </div>
+<div class='header'>
+    <div class='header__top'>
+        <h1 class='header__top__title'> Quilombo driven development </h1>
     </div>
-    <div class="container-image">
-            <div class='header-image'>
-                <img class="mainLogo" src="/assets/bombMarioQDD.png" />
-            </div>
+    <div class='header__nav'>
+        <a class='header__nav__item' href={{ page.base-url }}>{{ site.translate['home'][page.lang] }}</a>
+        <a class='header__nav__item' href={{ page.base-url | append: page.pages-url | append:'/about.html' }}>{{ site.translate['about'][page.lang] }}</a>
+        <a class='header__nav__item' href={{ page.base-url | append: page.pages-url | append:'/glosarry.html' }}>{{ site.translate['glosarry'][page.lang] }}</a>
+    </div>
+    <div class='header__lang'>
+        <a class='header__lang_item' href="/">es</a>
+        <a class='header__lang_item' href="/en">en</a>
     </div>
 </div>
