[REF] new design for first view

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,19 @@
 <div class='header'>
-    <div class='header__top'>
-        <h1 class='header__top__title'> Quilombo driven development </h1>
-    </div>
-    <div class='header__nav'>
+   <div class='header__nav'>
+        <span class='header__nav__title'> Quilombo Driven Development - </span>
         <a class='header__nav__item' href={{ page.base-url }}>{{ site.translate['home'][page.lang] }}</a>
-        <a class='header__nav__item' href={{ page.base-url | append: page.pages-url | append:'/about.html' }}>{{ site.translate['about'][page.lang] }}</a>
-        <a class='header__nav__item' href={{ page.base-url | append: page.pages-url | append:'/glosarry.html' }}>{{ site.translate['glosarry'][page.lang] }}</a>
+        <a class='header__nav__item' href={{ page.base-url | append: page.pages-url | append:
+            '/about.html' }}>{{ site.translate['about'][page.lang] }}</a>
+        <a class='header__nav__item' href={{ page.base-url | append: page.pages-url | append:
+            '/glosarry.html' }}>{{ site.translate['glosarry'][page.lang] }}</a>
     </div>
-    <div class='header__lang'>
-        <a class='header__lang_item' href="/">es</a>
-        <a class='header__lang_item' href="/en">en</a>
-    </div>
+    <!--<div class='header__lang'>-->
+        <!--<a class='header__lang_item' href="/">es</a>-->
+        <!--<a class='header__lang_item' href="/en">en</a>-->
+    <!--</div>-->
+    <!--<div class='header__top'>-->
+        <!--<div class='header__top__title'>-->
+            <!--<p> Quilombo Driven Development </p>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
