--- a/_sass/qdd/_base.scss
+++ b/_sass/qdd/_base.scss
@@ -1,19 +1,15 @@
-
 body{
-  font-family: 'Rubik',Helvetica, Arial, sans-serif;
+  background: $background-color;
+  font-family: 'Lato',Helvetica, Arial, sans-serif;
   margin:0;
-  background-color: $background-color;
 }
+
 
 a{
  transition:all 0.3s ease;
  text-decoration:none;
  padding:5px;
  color:black;
- &:hover{
-    background: $background-color;
-    color: $color-bold;
- }
 }
 .container{
     max-width:calc(1200px - (30px * 2));
@@ -37,6 +33,9 @@ a{
     }
 }
 
+.title-font{
+    font-family: 'Bangers', cursive;
+}
 
 @media screen and (max-width: $mobile-width){
 
