--- a/_includes/postList.html
+++ b/_includes/postList.html
@@ -1,6 +1,18 @@
-<ul class="posts">
-        {% assign posts = site.posts | where: "lang", page.lang%}
-        {% for post in posts %}
-            {% include postPreview.html post=post %}
+<div>
+    <div class="posts">
+        {% assign posts = site.posts | where: "lang", page.lang |  group_by:"tag" %} 
+        {% for group in posts%} 
+            <div class='posts__group'> 
+                <div class='posts__group__title'> 
+                    <img class='posts__group__title__img' src={{ "../assets/" | append: group.name | append: ".png" }}></img>
+                </div>
+                <div class='posts__group__cards'> 
+                    {%for post in group.items %}
+                        {% include postPreview.html post=post %} 
+                    {% endfor %}
+                </div>
+            </div>
         {% endfor %}
-</ul>
+    </div>
+
+</div>
