--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -1,3 +1,4 @@
+// POST LAYOUT 
 .post{
     padding: 10px 25px;
     a{
@@ -7,6 +8,33 @@
         }
     }
 }
+
+.post__header{
+    height: 120px;
+    position: relative;
+    overflow:hidden;
+}
+.post__header__background{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    filter: grayscale(100%);
+    background-size: cover;
+}
+.post__header__title{
+    position:absolute;
+    bottom:0;
+    right: 0;
+    left: 0;
+    text-align: center;
+    background-color: rgba(238, 255, 0, 0.63);
+    margin: 10px;
+    padding: 10px;
+    color: black;
+
+
+}
+// MAIN LIST 
 
 .posts{
     padding: 0px;
@@ -25,6 +53,7 @@
     display:flex;
 }
 
+// CARDS 
 .postcard{
     margin: 10px;
     width: 300px;
