--- a/css/main.scss
+++ b/css/main.scss
@@ -7,8 +7,9 @@
 @import "../_sass/qdd/_cross_variables.scss";
 @import "../_sass/qdd/_base.scss";
 @import "../_sass/qdd/_post.scss";
-@import "../_sass/qdd/_code.scss";
+//@import "../_sass/qdd/_code.scss";
 @import "../_sass/qdd/_syntax.scss";
+@import "../_sass/qdd/_md.scss";
 @import "../_sass/qdd/_header.scss";
 @import "../_sass/qdd/_footer.scss";
 
